# python-lifecyclelogging

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: settings.yml
.github/workflows/: auto-merge.yml  ci.yml  claude-code.yml  codeql.yml  docs.yml  nightly-improve.yml  ollama-pr-review.yml  pr-review.yml
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/development/: releases.md
examples/: README.md  basic_logging.py  exit_run_formatting.py  markers_and_storage.py  verbosity_control.py
memory-bank/: activeContext.md
src/lifecyclelogging/: __init__.py  logging.py  utils.py
tests/: test_exit_run.py  test_logging.py
