[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.targets.wheel]
exclude = [".github"]

[project]
name = "lifecyclelogging"
version = "1.0.0"
description = "A comprehensive logging utility for managing application lifecycle logs"
requires-python = ">=3.9"
license = { text = "MIT" }
readme = "README.md"
keywords = ["logging", "lifecycle", "debug"]
authors = [{ name = "Jon Bogaty", email = "jon@jonbogaty.com" }]
maintainers = [{ name = "Jon Bogaty", email = "jon@jonbogaty.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.7.1",
    "extended-data-types>=2025.11.164",
    "typing-extensions>=4.12.0; python_version < '3.10'",
]

[project.urls]
Documentation = "https://github.com/jbcom/lifecyclelogging#readme"
Issues = "https://github.com/jbcom/lifecyclelogging/issues"
Source = "https://github.com/jbcom/lifecyclelogging"

[project.optional-dependencies]
tests = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "coverage[toml]>=7.6.0",
    "hypothesis>=6.100.2",
]
docs = [
    "sphinx>=7.4.0",
    "sphinxawesome-theme>=5.2.0",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-autodoc-typehints>=2.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=3.0.1",
    "docutils>=0.21.2",
]
typing = ["mypy>=1.10.1"]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = "tests"
xfail_strict = true
filterwarnings = []

[tool.coverage.paths]
source = [
    "src/lifecyclelogging",
    ".tox/*/lib/python*/site-packages/lifecyclelogging",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["lifecyclelogging"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == '__main__':",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise ImportError",
    "except ImportError:",
    "pass",
]

[tool.ruff]
target-version = "py39"
src = ["lifecyclelogging", "tests"]
exclude = ["docs"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]
"tests/*.py" = ["INP001", "S101"]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
python_version = "3.9"
strict = true
pretty = true
show_error_codes = true
enable_error_code = ["ignore-without-code"]
ignore_missing_imports = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/lifecyclelogging/__init__.py:__version__"]
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "docs", "style", "refactor", "test", "chore", "ci", "build", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
